Add an endpoint to get token
